Visual bug fix for alignments on preview page

--- a/app/assets/stylesheets/recruiters/jobs.sass
+++ b/app/assets/stylesheets/recruiters/jobs.sass
@@ -164,14 +164,12 @@
     .title
       font-weight: bold
       text-align: right
-    .description.highlight_badge_main
-
-      margin-left: -10px !important
     .highlight_badge
       background: #e4e4e4
       border-radius: 4px
       padding: 3px 7px
-      margin-bottom: 10px
+      margin: 0px 10px 10px 0px
+      float: left
 
   .form-actions.yellow_bg
     background: #fffcf3 !important
